fixes on layout. pending: add/remove logic

--- a/src/features/combatReady/CombatReady.module.css
+++ b/src/features/combatReady/CombatReady.module.css
@@ -1,8 +1,10 @@
 .row {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
   height: 100%;
+  width: 100%;
 }
 
 .title {
