--- a/src/features/list/pokemonList.module.css
+++ b/src/features/list/pokemonList.module.css
@@ -2,15 +2,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   height: 100vh;
   overflow-y: scroll;
+  padding: 16px 0;
 }
 
 .pokemonGrid {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 16px;
   padding: 16px;
   justify-content: center;
@@ -23,4 +23,11 @@
   align-items: center;
   gap: 16px;
   margin-bottom: 16px;
+}
+.textbox {
+  width: 300px;
+  height: 30px;
+  border-radius: 5px;
+  border: 2px solid #999;
+  padding: 5px;
 }
