--- a/src/features/list/pokemonList.module.css
+++ b/src/features/list/pokemonList.module.css
@@ -5,7 +5,7 @@
   justify-content: flex-start;
   height: 100vh;
   overflow-y: scroll;
-  padding: 16px 0;
+  padding: 32px 0 16px;
 }
 
 .pokemonGrid {
