--- a/src/features/pokemon/Pokemon.module.css
+++ b/src/features/pokemon/Pokemon.module.css
@@ -16,7 +16,10 @@
   cursor: pointer;
 }
 .card:hover img {
-  transform: scale(1.1);
+  transition: transform 0.3s;
+}
+.card:hover img {
+  transform: scale(1.2);
 }
 
 
