--- a/src/features/combatReady/CombatReady.module.css
+++ b/src/features/combatReady/CombatReady.module.css
@@ -15,9 +15,25 @@
 
 .pokemons {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 16px;
   padding: 16px;
   justify-content: center;
   align-items: flex-start;
+}
+
+
+
+@media screen and (max-width: 1280px) {
+  .pokemons {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  
+}
+
+@media screen and (max-width: 1024px) {
+  .pokemons {
+    grid-template-columns: 1fr 1fr;
+  }
+  
 }
